src/App.css
.navbar-icon {
    cursor: pointer;
}

.navbar-icon:hover {
    color: gray;
}

.map-list-wrapper {
    position: absolute;
    top: 50px;
    bottom: 0;
    left: 0;
    right: 0;
}

.earthquake-list li {
    list-style: none;
    font-size: 1.25rem;
    padding: 10px;
}

.earthquake-list li.active {
    background-color: lightgray;
}

#map-container {
    width: 100%;
    height: 100%;
}

